<resources>
    <string name="app_name">mvc-practice</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="occ">Occupation</string>
    <string name="sample_data_form">Sample Data Form</string>
    <string name="address">Address</string>
    <string name="apply">Apply</string>
    <string name="view_profile">View Profile</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome to the Second Activity</string>
    <string name="go_back">Go Back</string>
    <string name="frags">Go to Fragments Activity</string>
    <string name="profile_view">Profile View</string>
</resources>