<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2BDDB9"
    android:backgroundTint="#BBEFE4"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etOccupation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/occ"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/age"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etName"
        app:layout_constraintTop_toTopOf="@+id/etName"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toStartOf="@+id/etAge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFlavorText"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tvFlavorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sample_data_form"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/address"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etOccupation"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#514E4E"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnViewProfile"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Address"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnViewProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="26dp"
        android:backgroundTint="#F1EBEB"
        android:hapticFeedbackEnabled="true"
        android:text="@string/view_profile"
        android:textColor="#141312"
        app:layout_constraintBottom_toBottomOf="@+id/btnApply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnApply"
        app:layout_constraintTop_toTopOf="@+id/btnApply"
        app:strokeColor="#121111"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>